# matchit.cpp

./:  .clang-format  .gitignore  Abstract.md  CMakeLists.txt  Comparison-to-proposal.md  DESIGN.md  From-Match-Pattern-Proposal-to-matchit.md  From-Pattern-Matching-Proposal-to-matchit.md  From-Rust-to-matchit.md  GUIDE.md  LICENSE  Makefile  Proposal.md  README.md  REFERENCE.md  blacklist.txt  msan.blacklist  single-header.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: MSAN.yml  clang-tidy-review.yml  cmake.yml  codacy.yml  codeql-analysis.yml  coverage.yml  cpp-clang-check.yml  cppcheck.yml  flawfinder.yml  greetings.yml  sanitizers.yml  stale.yml  static-analysis.yml  valgrind.yml
cmake/: CodeCoverage.cmake  FetchGTest.cmake  Sanitizers.cmake  matchitConfig.cmake.in
develop/: CMakeLists.txt  footer.txt  header.txt  matchit.h
develop/matchit/: core.h  expression.h  patterns.h  utility.h
include/: core.h  expression.h  matchit.h  patterns.h  utility.h
include/matchit/: core.h  expression.h  patterns.h  utility.h
sample/: CMakeLists.txt  Closed-Class-Hierarchy.cpp  Conditional-if-let-Expressions.cpp  Destructuring-Enums.cpp  Destructuring-Nested-Structs-and-Enums.cpp  Enum-Class.cpp  Evaluating-Expression-Trees.cpp  Extra-Conditionals-with-Match-Guards.cpp  Extractor-Pattern.cpp  Identifier-pattern.cpp  Literal-pattern.cpp  Matcher-within.cpp  Matching-Strings.cpp  Matching-Tuples.cpp  Matching-Variants.cpp  Predicate-based-Discriminator.cpp  Range-pattern.cpp  Red-black-Tree-Rebalancing.cpp  Reference-pattern.cpp  Slice-pattern.cpp  Struct-pattern.cpp  Structured-Binding-Pattern.cpp  Terminate.cpp  Tuple-struct-pattern.cpp  While-conditional-let-Loops.cpp  Wildcard-pattern.cpp  at-Bindings.cpp  checkAndlogLarge.cpp  clip.cpp  contains.cpp  customAsPointer.cpp  customDs.cpp  detectTuplePattern.cpp  eval.cpp  getClassName.cpp  graph.cpp  isLarge.cpp  isValid.cpp  mutation.cpp  optionalLift.cpp  (+7 more)
samples/: CMakeLists.txt  Closed-Class-Hierarchy.cpp  Conditional-if-let-Expressions.cpp  Dereference-Pattern.cpp  Destructuring-Enums.cpp  Destructuring-Nested-Structs-and-Enums.cpp  Evaluating-Expression-Trees.cpp  Extra-Conditionals-with-Match-Guards.cpp  Extractor-Pattern.cpp  Identifier-pattern.cpp  Ignoring-Parts-of-a-Value-with-a-Nested-_.cpp  Literal-pattern.cpp  Matcher-within.cpp  Matching-Integrals.cpp  Matching-Polymorphic-Types.cpp  Matching-Strings.cpp  Matching-Tuples.cpp  Matching-Variants.cpp  Predicate-based-Discriminator.cpp  Range-pattern.cpp  Red-black-Tree-Rebalancing.cpp  Reference-pattern.cpp  Rest-pattern.cpp  Slice-pattern.cpp  Struct-pattern.cpp  Structured-Binding-Pattern.cpp  Terminate.cpp  Tuple-struct-pattern.cpp  While-conditional-let-Loops.cpp  Wildcard-pattern.cpp  at-Bindings.cpp  checkAndlogLarge.cpp  clip.cpp  contains.cpp  customAsPointer.cpp  customDs.cpp  detectTuplePattern.cpp  eval.cpp  factorial.cpp  gcd.cpp  (+12 more)
src/: core.h  main.cpp  patterns.h
test/: CMakeLists.txt  Makefile
test/matchit/: CMakeLists.txt  Id.cpp  Makefile  app.cpp  constexpr.cpp  ds.cpp  expr.cpp  id.cpp  legacy.cpp  main.cpp  noRet.cpp  optexpr.cpp
tests/: main.cpp
