add_executable(unittests main.cpp)
target_compile_options(unittests PRIVATE ${BASE_COMPILE_FLAGS})
target_link_libraries(unittests PRIVATE matchit)
set_target_properties(unittests PROPERTIES CXX_EXTENSIONS OFF)
add_test(NAME unittests COMMAND unittests WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set_tests_properties(unittests PROPERTIES FAIL_REGULAR_EXPRESSION "Failed")